gitops/components/app-platform/tpl-app/tpl-backend/redis/workload.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: tpl-redis-provision-in, namespace: data-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: redis}}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {matchLabels: {app.kubernetes.io/name: tpl-redis-provision}}
      ports: [{protocol: TCP, port: 6379}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: tpl-redis-provision-out, namespace: data-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: tpl-redis-provision}}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector: {matchLabels: {app.kubernetes.io/name: redis}}
      ports: [{protocol: TCP, port: 6379}]
